--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,31 @@ dependencies:
   rxdart: ^0.24.1
   geoflutterfire: ^2.2.1
   location: 3.0.2
-  google_maps_flutter: 0.5.31
+  google_maps_flutter: 0.5.32
+  flutter_screenutil: ^2.3.0
+  flutter_svg: ^0.18.1
+  built_value: ^7.1.0
+  connectivity: ^0.4.9+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.0
+  built_value_generator: ^7.1.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/fonts/
+  fonts:
+    - family: Open Sans
+      fonts:
+        - asset: assets/fonts/OpenSans-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/OpenSans-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/OpenSans-Light.ttf
+          weight: 300
+        - asset: assets/fonts/OpenSans-Regular.ttf
+          weight: 400
