Refactor to repository design pattern

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,10 @@ dependencies:
   location: 3.0.2
   google_maps_flutter: 0.5.32
   flutter_screenutil: ^2.3.0
-  flutter_svg: ^0.18.1
+  flutter_svg: ^0.19.0
   built_value: ^7.1.0
   connectivity: ^0.4.9+2
+  dartz: ^0.9.1
 
 dev_dependencies:
   flutter_test:
